[tool.poetry]
name = "repl_python3_Web-Scraping-using-Selenium"
version = "0.1.0"
description = ""
authors = ["codebibek <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
selenium = "^4.1.3"
pandas = "^1.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
